integrate bridge as ramp
